Add select sort, and input search

--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@
 }
 body {
   font-family: "Inter", sans-serif;
-  background-color: #d4d3d8;
+  background-color: #f5f5f5;
 }
 .container {
   max-width: 688px;
@@ -50,7 +50,7 @@ body {
   line-height: 21px;
 }
 .form__input::placeholder {
-  font-family: "Inter";
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -88,6 +88,7 @@ hr {
   height: 1px;
   max-width: 100%;
   margin-top: 40px;
+  opacity: 0.2;
 }
 select:not(:valid) {
   font-weight: 400;
@@ -95,21 +96,23 @@ select:not(:valid) {
   line-height: 21px;
   color: #abb5be;
 }
-.wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+.grid {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr 1fr;
 }
 .card {
   background: #ffffff;
   border: 1px solid #dee2e6;
   border-radius: 4px;
-  margin-bottom: 20px;
 }
 .card__picture {
   display: block;
   width: 100%;
   height: auto;
+  object-fit: cover;
+}
+.card__img {
   object-fit: cover;
 }
 .info {
@@ -150,8 +153,5 @@ p {
   }
   .form__select {
     width: 100%;
-  }
-  .wrapper {
-    justify-content: center;
   }
 }
