--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,10 @@ body {
   font-family: "Inter", sans-serif;
   background-color: #f5f5f5;
 }
+a {
+  text-decoration: none;
+  color: inherit;
+}
 .container {
   max-width: 688px;
   margin: 0 auto;
@@ -105,6 +109,33 @@ select:not(:valid) {
   background: #ffffff;
   border: 1px solid #dee2e6;
   border-radius: 4px;
+  position: relative;
+}
+.like__container {
+  width: 48px;
+  height: 48px;
+  background-color: #fff;
+  border-radius: 1000px;
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.like__container:hover {
+
+}
+.like__img {
+  width: 24px;
+  height: 23px;
+  transition: .3s;
+  margin-top: 3px;
+}
+.like__img:hover {
+  transform: scale(1.2);
+  transition: .3s;
 }
 .card__picture {
   display: block;
